completed the footer modified the site logo fixed alignment of flex images

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,12 @@
 /* code is written in order of sections of the page from top to bottom
 
-project colors: 
-hex# colors can all found in comments next to elements in html file
+project colors:
+#f0f0dd text color links button
+#f5f0e6 larg scale menu bg
+#591013 text links(large scale) button bg covid banner
+#262626 footer
+#32281c hover media queries(link text color)
+
 
 
 font-family(already linked in head section of index.html
@@ -49,11 +54,22 @@ html {
 }
 
 h1.header-covid-heading {
-    font-size: 1.2em;
+    font-size: 1.1rem;
+    font-weight: normal;
     letter-spacing: .001rem;
     line-height: 2.5rem;
-    color:;
     text-align: center;
+
+}
+
+h1.header-covid-heading a {
+    color: #f0f0dd;
+    text-decoration: none;
+}
+
+
+h1.header-covid-heading a:hover {
+    text-decoration: underline;
 }
 
 
@@ -62,13 +78,11 @@ h1.header-covid-heading {
 }
 
 /* x covid icon */
-h1.header-covid-heading .header_close-icon {
-    padding-left: 1.2rem;
-    color: #f0f0dd;
-}
+/* h1.header-covid-heading .header_close-icon {
+    padding-left: 1rem;
+} */
 
-h1.header-covid-heading a {
-}
+
 
 
 
@@ -81,15 +95,15 @@ div#primary-nav-eTutors-logo {
     top: 3.8%;
     background: rgb(248, 248, 248);
     width: 100%;
-    height: 20rem;
-    box-shadow:;
+    height: 23rem;
+    box-shadow: 1px 1px 5px rgba(0,0,0,  0.5);
 }
 
 
 img.primary-nav-logo {
     /* position: relative; */
     z-index: 998;
-    height: 13rem;
+    height: 15rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -103,7 +117,7 @@ img.primary-nav-logo {
 nav#nav__primary {
     position: relative;
     z-index: 997;
-    top: 22.1rem;
+    top: 24.5rem;
 }
 
 
@@ -115,17 +129,47 @@ ul.primary-nav-flex-container {
     font-size: 1.9rem;
 }
 
-ul.primary-nav-flex-container li {
+.primary-nav-flex-container li {
     padding-bottom: 2rem;
     padding-top: 2rem;
-    border-bottom: 1px solid #eee;
-    background:;
+    border-bottom: .01px solid #aaa;
+    background: #591013;
+    
+}
+
+
+ul.primary-nav-flex-container li a {
+    text-decoration: none;
+    color: #f0f0dd;
+    
+}
+
+
+ul.primary-nav-flex-container li a:visited {
+    text-decoration: none;
+    color: #f0f0dd;
+    
+}
+
+
+ul.primary-nav-flex-container li a:hover {
+    text-decoration: underline;
+    color: #f0f0dd;
     
 }
 
 
 button.volunteer-mobile {
- margin-top: 2rem;
+ margin-top: 1.2rem;
+ padding: 1.2rem 2rem;
+ margin-left: 50%;
+ transform: translatex(-50%);
+ background: #591013;
+ border: none;
+ border-radius: .5rem;
+ color: #f0f0dd;
+ font-weight: 700;
+ font-size: 1.8rem;
 }
 
 button.volunteer {
@@ -135,14 +179,23 @@ button.volunteer {
 /* hero image  */
 div.imgHome-hero {
     position: relative;
-    top: 22.1rem;
+    top: 24.5rem;
     width: 100%;
-    height: 30rem;
+    height: 35rem;
     background-image: "#";
     background-color: gray;
     background-position: "#";
     background-size: "#";
     background-repeat: "#";
+}
+
+.imgHome-hero h2 {
+    font-size: 2.4rem;
+    color: #f0f0dd;
+    font-weight: 900;
+    text-align: center;
+    padding-top: 8rem;
+    letter-spacing: .5rem;
 }
 
 /* .......................main section begins here */
@@ -154,16 +207,67 @@ div.imgHome-hero {
 }
 
 
-.main_para-home {
-    background: #eaeaea;
-    padding:2rem;
+
+.main_networkCircles-icon {
+    height: 8rem;
+    margin-top: 8rem;
+    margin-left: 50%;
+    transform: translatex(-50%);
 }
+
+
+h2.main_page-section-heading {
+  
+}
+
+
+h2.main_page-section-heading-two {
+}
+
+
+hr {
+    display: none;
+}
+
+
+hr.main_para-hr-bottom {
+  display: none;
+}
+
+
+.main_para-home {
+    background: #f3f3f3;
+    margin-top: 3rem;
+}
+
+
+h3.main-para-home-heading {
+   
+}
+
+
+.main_para-home p {
+    
+}
+
 
 
 .main_images-flex-container {
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
 }
+
+
+
+.main_flex-image-text-wrapper p {
+   
+    width: 200px;
+    font-size:1.5rem;
+    margin-left: 1rem;
+}
+
+
 
 .main_img-tutor-network-item {
     margin: 1rem;
@@ -171,24 +275,106 @@ div.imgHome-hero {
 
 /* ........................footer section begins here */
 #footer__section {
-    height: 30rem;
+    /* height: 40rem; */
     width: 100%;
-    border: 1px solid #000;
     padding-top: 2rem;
+    background: #262626;
 }
+
+
+img.footer_logo {
+    height: 5rem;
+    display: none;
+
+}
+
+
+.footer_logo-address-container {
+    display: none;
+}
+
+
+h2.footer_quicklinks-heading {
+    color: #f0f0dd;
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+    margin-top: 3rem;
+}
+
+
+
+ul.footer-quicklinks-flex-container{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2rem;
+    /* margin-left: auto;
+    margin-right: auto; */
+    text-align: center;
+  
+}
+
+
+
+ul.footer-quicklinks-flex-container {
+    list-style: none;
+
+}
+
+
+ul.footer-quicklinks-flex-container li {
+    font-size: 1.4rem;
+    padding: 1rem 2rem 1rem 2rem;
+
+}
+
+
+
+ul.footer-quicklinks-flex-container li a {
+    color: #f0f0dd;
+    text-decoration: none;
+
+}
+
+ul li.quick-links-flex-item {
+    margin-left: auto;
+    margin-right: auto;
+    flex: 0 1 50%;
+}
+
+
+
+h2.footer-followUs-heading {
+    font-size: 2rem;
+    color: #f0f0dd;
+    width: 100%;
+    text-align: center;
+    padding-top: 3rem;
+    margin-top: 0;
+
+}
+
 
 .footer_social-media {
-    border: 1px solid #000;
     height: 8rem;
     width: 100%;
+    text-align: center;
 }
+
+
+
+.soc-icons {
+    color: #f0f0dd;
+    font-size: 2.5rem;
+    padding: 4.5rem 2rem;
+}
+
+
 
 div.footer_copyright-container {
-    border: 1px solid red;
+    padding: 2.5rem;
+    text-align: center;
+    font-size: 1.4rem;
+    color: #f0f0dd;
 }
 
-.main_flex-image-text p {
-    padding: 1rem;
-    width: 200px;
-    font-size:1.5rem;
-}
